@@ -1,5 +1,6 @@
 This is the change log for assignment 1, initial entry, Last entry First.
 
+2/14/2016 06:12 Cody Lin - add assemble functionality
 2/14/2016 17:57 Kelly Liu - added assemble views and MY_model
 2/14/2016 17:53 Lin Zhu - added game functions and views
 2/14/2016 17:41 Cody Lin - added player function and views 
